--- a/ddddd/App.xaml
+++ b/ddddd/App.xaml
@@ -2,7 +2,7 @@
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:local="clr-namespace:ddddd"
-             StartupUri="MainWindow.xaml">
+             StartupUri="AutoMode.xaml">
     <Application.Resources>
          
     </Application.Resources>
